<resources>
    <string name="app_name">Kartini Lite</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="request_client_id">505298731823-ikh5jsgvememoa7315h4hufc5bvdimng.apps.googleusercontent.com</string>
    <string name="facebook_application_id" translatable="false">247055526376366</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb247055526376366</string>


    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="disconnect">Disconnect</string>
    <string name="sign_in">Sign In</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="loading">Loading …</string>
    <string name="login_with">Login with</string>
    <string name="welcome">Welcome</string>
    <string name="to">to</string>
    <string name="kartini">Kartini</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="nama">Nama</string>
    <string name="type_a_message">Type a Message</string>
    <string name="post">POST</string>
    <string name="attach_file">Attach File</string>
    <string name="write_somethings">Write somethings</string>
    <string name="add_post">Add Post</string>
    <string name="type_a_comment">Type a Comment</string>
    <string name="bagi_yang_bilang">Bagi yang bilang “Koq seperti angka 10?” Ya memang! Tapi gak apa-apa yang penting dua-duanya ganteng… dan sudah bekerja serta berusaha yang terbaik demi kampus masing-masing. Prihal hasil Tuhan yang menentukan.</string>
    <string name="_0">0</string>
    <string name="image">image</string>
    <string name="forum">Forum</string>
    <string name="search">Search</string>
    <string name="create_new_post">Create new post</string>
    <string name="counseling">Counseling</string>
    <string name="new_message">New Message</string>
    <string name="whochats">Whochats</string>
    <string name="welcome_name">Welcome, Name !</string>
    <string name="home">Home</string>
    <string name="emergency">EMERGENCY</string>
    <string name="discussions">DISCUSSIONS</string>
    <string name="report_now">REPORT NOW</string>
    <string name="report">REPORT</string>
    <string name="counseling1">COUNSELING</string>
    <string name="consult_now">CONSULT NOW</string>
    <string name="whochat">WHOCHAT</string>
    <string name="forum1">FORUM</string>
    <string name="chat">CHAT</string>
    <string name="select_counselor">Select Counselor</string>
    <string name="select_user">Select User</string>
    <string name="halo_tami">Halo, Tami !</string>
    <string name="ibnu_adam">Ibnu Adam</string>
    <string name="address">Address</string>
    <string name="purbalingga">Purbalingga</string>
    <string name="contact_person">Contact Person</string>
    <string name="_628762827239">+628762827239</string>
    <string name="me_ibnadm_com">me@ibnadm.com</string>
    <string name="_6286728135622">+6286728135622</string>
    <string name="update">UPDATE</string>
    <string name="trusted_contact">Trusted Contact</string>
    <string name="send">SEND</string>
    <string name="report1">Report</string>
    <string name="title">Title</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="latest_message">Latest Message</string>
    <string name="lorem_ipsum_kekerasan">lorem ipsum kekerasan</string>
    <string name="menunggu">Menunggu</string>
    <string name="date">date</string>
    <string name="reply_privately">Reply Privately</string>
    <string name="import_a_image">import_a_image</string>
    <string name="format_date">September 8</string>
    <string name="time_format">12:08</string>
    <string name="disetujui_text">Laporan kamu telah direview dan disetujui. sebentar lagi akan dihubungi untuk tindakan lebih lanjut.</string>
    <string name="date_progress">September 2 at 10:00</string>
    <string name="direview_text">Laporan kamu sedang direview. Mohon ditunggu</string>
    <string name="sent">Terkirim</string>
    <string name="sent_text">Laporan kamu sudah kami terima.</string>
    <string name="submited_text">Kamu telah melakukan pelaporan, kami akan segera mereview laporan kamu.</string>
    <string name="otp_code">OTP Code</string>
    <string name="phone">Phone</string>
    <string name="get_otp">get otp</string>
    <string name="set_trusted_contact">Set Trusted Contact</string>
    <string name="_62">+62</string>
    <string name="verify">Verify</string>
    <string name="_085">085</string>
    <string name="nik">NIK</string>
</resources>
