<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_alter"
    tools:context=".activities.MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@drawable/ic_keyboard_backspace_black_24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_20sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_hello"
                android:layout_width="@dimen/_195sdp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_24sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/halo_tami"
                android:textColor="#000000"
                android:textSize="@dimen/_20ssp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                app:civ_border_color="#FF000000"
                app:civ_border_width="0dp" />

            <Button
                android:id="@+id/btn_logout"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@drawable/logout" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/space_x1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/layout_bg"
                    android:orientation="vertical"
                    android:padding="@dimen/activity_vertical_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:text="@string/profile"
                        android:textColor="#000000"
                        android:textSize="@dimen/_13ssp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/full_name"
                        android:textSize="@dimen/_9ssp"
                        tools:ignore="Smallsp" />

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:autofillHints=""
                        android:background="@drawable/edit_text_bg"
                        android:ems="10"
                        android:fontFamily="@font/montserrat"
                        android:inputType="textPersonName"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/ibnu_adam"
                        android:textSize="@dimen/_12ssp"
                        tools:ignore="LabelFor" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/address"
                        android:textSize="@dimen/_9ssp"
                        tools:ignore="Smallssp" />

                    <EditText
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:autofillHints=""
                        android:background="@drawable/edit_text_bg"
                        android:ems="10"
                        android:fontFamily="@font/montserrat"
                        android:inputType="textPersonName"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/purbalingga"
                        android:textSize="@dimen/_12ssp"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/contact_person"
                        android:textSize="@dimen/_9ssp"
                        tools:ignore="Smallssp" />

                    <EditText
                        android:id="@+id/et_cp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:autofillHints=""
                        android:background="@drawable/edit_text_bg"
                        android:ems="10"
                        android:fontFamily="@font/montserrat"
                        android:inputType="textPersonName"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/_628762827239"
                        android:textSize="@dimen/_12ssp"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/nik"
                        android:textSize="@dimen/_9ssp"
                        tools:ignore="Smallssp" />

                    <EditText
                        android:id="@+id/et_nik"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:autofillHints=""
                        android:background="@drawable/edit_text_bg"
                        android:ems="10"
                        android:fontFamily="@font/montserrat"
                        android:inputType="number"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/_0"
                        android:textSize="@dimen/_12ssp"
                        tools:ignore="LabelFor,TextFields" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/email"
                        android:textSize="@dimen/_9ssp"
                        tools:ignore="Smallssp" />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                        android:autofillHints=""
                        android:background="@drawable/edit_text_bg"
                        android:ems="10"
                        android:fontFamily="@font/montserrat"
                        android:inputType="textPersonName"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/me_ibnadm_com"
                        android:textSize="@dimen/_12ssp"
                        tools:ignore="LabelFor,TextFields" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/trusted_contact"
                        android:textSize="@dimen/_9ssp"
                        tools:ignore="Smallssp" />

                    <EditText
                        android:id="@+id/et_tc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_8sdp"
                        android:autofillHints=""
                        android:background="@drawable/edit_text_bg"
                        android:ems="10"
                        android:fontFamily="@font/montserrat"
                        android:inputType="phone"
                        android:padding="@dimen/_10sdp"
                        android:text="@string/_6286728135622"
                        android:textSize="@dimen/_12ssp"
                        tools:ignore="LabelFor" />

                    <TextView
                        android:id="@+id/btn_set_tc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/set_trusted_contact"
                        android:textColor="#FF00A1"
                        android:textSize="@dimen/_9ssp"
                        tools:ignore="Smallssp" />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </LinearLayout>


    <Button
        android:id="@+id/btn_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space_x2"
        android:background="@drawable/btn_bg"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/update"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>