<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_8sdp">

    <TextView
        android:id="@+id/tv_title_report1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/lorem_ipsum_kekerasan"
        android:textColor="#000000"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_state_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="#03EE61"
        android:fontFamily="@font/montserrat_bold"
        android:foregroundTint="#788A6B"
        android:paddingLeft="@dimen/_10sdp"
        android:paddingRight="@dimen/_10sdp"
        android:text="@string/menunggu"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintStart_toStartOf="@+id/tv_title_report1"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_report1"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/date"
        android:textColor="#979797"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_state_report"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_state_report" />
</androidx.constraintlayout.widget.ConstraintLayout>