<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/_16sdp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_post_author_comment"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:civ_border_color="#FF000000"
        app:civ_border_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_post_author_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/name"
        android:textColor="#000000"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toEndOf="@+id/iv_profile_post_author_comment"
        app:layout_constraintTop_toTopOf="@+id/iv_profile_post_author_comment" />

    <TextView
        android:id="@+id/tv_text_comment_row"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/bagi_yang_bilang"
        android:textAlignment="viewStart"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile_post_author_comment" />

    <TextView
        android:id="@+id/tv_date_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/format_date"
        app:layout_constraintStart_toStartOf="@+id/tv_name_post_author_comment"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_post_author_comment" />

</androidx.constraintlayout.widget.ConstraintLayout>